[package]
name = "mem_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mem_base"
crate-type = ["cdylib"]

[build-dependencies]
serde = {version = "1.0.197", features = [ "derive" ]}
serde_json = "1.0.114"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "consoleapi", "libloaderapi", "synchapi", "handleapi", "memoryapi", "winbase", "winuser", "psapi"] }
